# EstructuraDatos

./: .gitignore
Clase/24.09.13/: array.c  caracter.c  centroide.c  enum.c  helloWorld.c  padding.c  suma.c
Clase/24.09.16/: CMakeLists.txt
Clase/24.09.16/src/: ArrayPunt.c  Cadenas.c  Ejercicio1.c  Ejercicio2.c  PasoRef.c  Strcpy.c
Clase/24.09.18/src/: Ejemplo4.c  linkedList.c
Estructuras Completas/Canales/: CMakeLists.txt
Estructuras Completas/Canales/src/: principal.c
Estructuras Completas/Canales/src/canalesl/: canales.c  canales.h
Estructuras Completas/Cola/: CMakeLists.txt
Estructuras Completas/Cola/src/: cola.c  cola.h
Estructuras Completas/HashTable/: CMakeLists.txt
Estructuras Completas/HashTable/src/: main.c
Estructuras Completas/HashTable/src/GestionAcceso/: hash.c  hash.h  persona.c  persona.h
Estructuras Completas/LinkedList/src/: linkedList.c
Estructuras Completas/Pila/: CMakeLists.txt
Estructuras Completas/Pila/src/Stack_A/: stack_a.c  stack_a.h
Estructuras Completas/Pila/src/Stack_LL/: stack_ll.c  stack_ll.h
Java/Genericos/: pom.xml
Java/Genericos/src/main/java/org/genericos/: Main.java
Java/Genericos/src/main/java/org/genericos/claseschorras/: Pelicula.java  Pelota.java  Perro.java
Java/Genericos/src/main/java/org/genericos/lista/: ListaEnteros.java  (+1 more)
Practicas/Practica1/src/: Main.c  Scheduler.c  Task.c
Practicas/Practica2/: CMakeLists.txt
Practicas/Practica2/src/: main.c
Practicas/Practica2/src/EEDD/: lista_enlazada_doble.c  lista_enlazada_doble.h
Practicas/Practica3/: pom.xml
Practicas/practica7/: pom.xml
(+69 files in other folders)
